# Rustify

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/androidTest/java/com/varuna/rustify/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: style_dark.json  style_keyless.json  style_satellite.json  style_topo.json
app/src/main/baselineProfiles/: baseline-prof.txt
app/src/main/java/com/varuna/rustify/: MainActivity.kt
app/src/main/java/com/varuna/rustify/audio/: AudioBackendSettings.kt  AudioHttp.kt  AudioSourceChain.kt  AudioSourceProvider.kt  AudioSourceRegistry.kt  CustomDownload.kt  DeezerArl.kt  DeezerAudioSource.kt  DeezerClient.kt  DeezerCrypto.kt  DeezerDecryptingDataSource.kt  DeezerSettings.kt  InvidiousAudioSource.kt  InvidiousInstances.kt  InvidiousSettings.kt  YouTubeVideoResolver.kt  YtDlpAudioSource.kt
app/src/main/java/com/varuna/rustify/bridge/: DownloadManager.kt  LyricsOffsetStore.kt  LyricsProviders.kt  LyricsRepository.kt  MatchStore.kt  NativeEngine.kt  SpotifyModels.kt  SpotifyRepository.kt  UserAlternatives.kt  YtMusicRepository.kt
app/src/main/java/com/varuna/rustify/dj/: ApiDjProvider.kt  DjAuto.kt  DjContextBuilder.kt  DjEngine.kt  DjModels.kt  DjPhrases.kt  DjProviders.kt  DjSettings.kt  DjSpeech.kt  DjVectors.kt  DjVoice.kt  HeuristicDjProvider.kt  LocalDjProvider.kt
app/src/main/java/com/varuna/rustify/metrics/: ListeningTracker.kt
app/src/main/java/com/varuna/rustify/player/: AndroidAutoBrowse.kt  AudioPlayerService.kt  MediaBrowserNotifier.kt  RustifyForegroundService.kt
app/src/main/java/com/varuna/rustify/sync/: AppAuthDriveAuth.kt  DriveSyncManager.kt  GoogleDriveSync.kt  RustifyBackup.kt
app/src/main/java/com/varuna/rustify/travel/: TravelPlaylist.kt  TravelRouting.kt  TravelSettings.kt
app/src/main/java/com/varuna/rustify/util/: AppLinksHosts.kt  BouncingMarquee.kt  LogCapture.kt  Retry.kt  RustifyWrapperLink.kt  ShareUtils.kt  (+2 more)
app/src/main/res/mipmap-anydpi-v26/: rustify.xml
app/src/main/res/values/: strings.xml  strings_diag.xml  strings_entity_menu.xml  strings_screens_extra.xml  themes.xml
app/src/main/res/values-es/: strings.xml  strings_diag.xml  strings_entity_menu.xml  strings_screens_extra.xml
app/src/main/res/values-ja/: strings.xml  strings_diag.xml  strings_entity_menu.xml  strings_screens_extra.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: automotive_app_desc.xml  file_paths.xml
app/src/test/java/com/varuna/rustify/: ExampleUnitTest.kt
core_engine/: Cargo.toml
core_engine/.cargo/: config.toml
core_engine/src/: lib.rs
core_engine/src/matcher/: algorithm.rs
core_engine/src/spotify/: album.rs  artist.rs  browse.rs  canvas.rs  client.rs  mod.rs  models.rs  playlist.rs  search.rs  track.rs  user.rs
core_engine/src/youtube/: mod.rs  models.rs  scraper.rs  server.rs  ytmusic.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+29 files in other folders)
